[gd_scene load_steps=2 format=3 uid="uid://286q72b8fii1"]

[ext_resource type="Script" path="res://entities/player/actions/player_idle_action.gd" id="1_856pj"]

[node name="Idle" type="Node2D"]
script = ExtResource("1_856pj")
deceleration_weight = 0.334

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="EarsTimer" type="Timer" parent="."]
wait_time = 2.7
one_shot = true

[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
[connection signal="timeout" from="EarsTimer" to="." method="_on_ears_timer_timeout"]
